<resources>
    <string name="app_name">iCasei_teste_igor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_video">Video</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_profile">Profile</string>
    <string name="description_thumbnail">Thumbnail</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Digite aqui o nome do vídeo</string>
    <string name="search_video">Procure um video</string>
    <string name="fazer_login">Fazer login</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="imagem_de_perfil">Imagem de perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="logout">Logout</string>
    <string name="t_tulo_do_v_deo">Título do Vídeo</string>
    <string name="login">Login</string>
    <string name="favorite_icon">favorite icon</string>
    <string name="default_web_client_id">Default web id client</string>
    <string name="criar_nova_playlist">Criar nova playlist</string>
    <string name="titulo">Título</string>
    <string name="nova_playlist">Nova Playlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_video">Delete video</string>
    <string name="selecionar_playlist">Selecionar Playlist</string>
</resources>