<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.icasei_teste_igor.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_playlist"
        android:name="com.example.icasei_teste_igor.presentation.playlist.PlaylistFragment"
        android:label="@string/title_playlist"
        tools:layout="@layout/fragment_playlist">

        <action
            android:id="@+id/action_playlistFragment_to_playlistDetailFragment"
            app:destination="@+id/navigation_playlist_detail"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.icasei_teste_igor.presentation.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_playlist_detail"
        android:name="com.example.icasei_teste_igor.presentation.playlistdetail.PlaylistDetailFragment"
        android:label="Detalhes da Playlist"
        tools:layout="@layout/fragment_playlist_detail">
        <argument
            android:name="playlistId"
            app:argType="long"
            android:defaultValue="0L" />
        <argument
            android:name="playlistTitle"
            app:argType="string"
            android:defaultValue='""' />
    </fragment>
</navigation>